Bug 1615098 [Wayland] Set opaque region to toplevel window only, r=jhorak a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D66583